--- a/templates/list.html
+++ b/templates/list.html
@@ -1,5 +1,5 @@
 <ul>
-  % for doc in docs:
-    <li>{{doc['Email']}}</li>
-  % end
+  {%-  for doc in docs: %}
+    <li>{{doc}}</li>
+  {% endfor %}
 </ul>
