--- a/templates/show.html
+++ b/templates/show.html
@@ -1,5 +1,5 @@
 <ul>
-  % for key in doc.keys():
+  {% for key in doc.keys(): %}
     <li><b>{{key}}:  </b>{{doc[key]}}</li>
-  % end
+  {% endfor %}
 </ul>
