--- a/static/css/main.css
+++ b/static/css/main.css
@@ -105,6 +105,14 @@ textarea {
 
    }
 
+   #sub_page {
+     border: 2px solid ;
+     border-radius: 2px;
+     padding: 10px 15px 10px 8px;
+     margin: 10px 15px 10px 8px;
+
+   }
+
 
 
 
