added export and import functionality via browser

--- a/templates/docs.html
+++ b/templates/docs.html
@@ -51,6 +51,7 @@
 
 {{render_pagination(pagination)}}
 {{show_scored(scored_status)}}
+<a href="/docs/export">Export To CSV</a>
 
 <p/>
 <div>{{message}}</div>
