updated README with install instructions and made some navigation improvements

--- a/templates/docs.html
+++ b/templates/docs.html
@@ -37,6 +37,12 @@
   <div>
     <a href="/docs/list/all/1">View All</a>
   </div>
+  <div>
+    <a href="/docs/import'">Import CSV File</a>
+  </div>
+  <div>
+    <a href="/docs/export'">Export CSV File</a>
+  </div>
   </div>
 {% endmacro %}
 
@@ -63,7 +69,6 @@
 
 {{render_pagination(pagination)}}
 {{show_scored(scored_status)}}
-<a href="/docs/export">Export To CSV</a>
 
 <p/>
 <div>{{message}}</div>
