--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,12 @@
   <b> Welcome to CSV Scoring Tool!</b>
 </div>
 <div>
+  <a href="/docs/import'">Import CSV File</a>
+</div>
+<div>
+  <a href="/docs/export'">Export CSV File</a>
+</div>
+<div>
   <a href="/list">View all records [{{total_count}}]</a>
 </div>
 <div>
