Abstracted MongoDB support to a driver class to make way for adding SQLite support

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,10 @@
   <b> Welcome to CSV Scoring Tool!</b>
 </div>
 <div>
-  <a href="/docs/import'">Import CSV File</a>
+  <a href="/docs/import">Import CSV File</a>
 </div>
 <div>
-  <a href="/docs/export'">Export CSV File</a>
+  <a href="/docs/export">Export CSV File</a>
 </div>
 <div>
   <a href="/list">View all records [{{total_count}}]</a>
