--- a/templates/docs.html
+++ b/templates/docs.html
@@ -38,10 +38,10 @@
     <a href="/docs/list/all/1">View All</a>
   </div>
   <div>
-    <a href="/docs/import'">Import CSV File</a>
+    <a href="/docs/import">Import CSV File</a>
   </div>
   <div>
-    <a href="/docs/export'">Export CSV File</a>
+    <a href="/docs/export">Export CSV File</a>
   </div>
   </div>
 {% endmacro %}
