fixed bug in sqlite driver and found a javascript solution for the problem of moving past the last record using the arrow keys

--- a/templates/docs.html
+++ b/templates/docs.html
@@ -16,6 +16,8 @@
       }}">Next &raquo;</a>
   {% endif %}
   </div>
+  <input id="pagnation_total_count" type="hidden" value="{{pagination.total_count}}" >
+  <div id="pagnation_message"></div>
 {% endmacro %}
 
 {% macro show_scored(scored_status) %}
